Bug 128619 - FILESAVE DOCX Chart gradients position is not saved correctly
Summary: FILESAVE DOCX Chart gradients position is not saved correctly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2019-11-06 09:36 UTC by NISZ LibreOffice Team
Modified: 2019-11-13 07:47 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (29.84 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-11-06 09:37 UTC, NISZ LibreOffice Team
Details
The original file saved by Writer (24.45 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-11-06 09:37 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Word and Writer (156.83 KB, image/png)
2019-11-06 09:38 UTC, NISZ LibreOffice Team
Details
Screenshot of the original and exported document side by side in Word (108.16 KB, image/png)
2019-11-06 09:38 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-11-06 09:36:33 UTC
Description:
When a Linear gradient fill is set for a chart data point, the position of the second gradient color is imported as the Border setting of the gradient (converted to fit LO paradigm, so instead of X% it is 100-X%).
On saving to DOCX this setting is lost and somehow the from and to colors appear switched in Word.


Steps to Reproduce:
1.	Set a gradient fill for a data point or data series in a Word chart with two colors
2.	Set a custom position for the second gradient color
3.	Save the file and open it in Writer
4.	Save as DOCX and open it in Word


Actual Results:
Both gradient colors have 0% Position set.

Expected Results:
The Position of the second color is retained.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.4.0.0.alpha1+ (x86)
Build ID: 80109586e6cb6d3e2e0a53a9079c3125ec9b8368
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL

In older version not even the gradient is exported:
Version: 5.4.0.3
Build ID: 92c2794a7c181ba4c1c5053618179937228ed1fb
CPU threads: 4; OS: Windows 6.2; UI render: default; 
Locale: en-US (hu_HU); Calc: CL
Comment 1 NISZ LibreOffice Team 2019-11-06 09:37:06 UTC
Created attachment 155557 [details]
Example file from Word
Comment 2 NISZ LibreOffice Team 2019-11-06 09:37:36 UTC
Created attachment 155558 [details]
The original file saved by Writer
Comment 3 NISZ LibreOffice Team 2019-11-06 09:38:01 UTC
Created attachment 155559 [details]
Screenshot of the original document side by side in Word and Writer
Comment 4 NISZ LibreOffice Team 2019-11-06 09:38:25 UTC
Created attachment 155560 [details]
Screenshot of the original and exported document side by side in Word
Comment 5 Balázs Varga 2019-11-11 11:32:03 UTC
Confirmed in:

Version: 6.4.0.0.alpha1+ (x64)
Build ID: 45c40f88e2aabfdeb8890ce7dcfd8c9a3d212e23
CPU threads: 8; OS: Windows 10.0 Build 14393; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US

and

Version: 6.2.5.2 (x64)
Build ID: 1ec314fa52f458adc18c4f025c545a4e8b22c159
CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Comment 6 Commit Notification 2019-11-13 07:29:14 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d7149889a9e1cae7f255691c2a35090ac3245bfa

tdf#128619 Chart OOXML export: fix gradient position

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.