tdf#128619 Chart OOXML export: fix gradient position

Export the gradient border value as gradient stop
position of the first color at LINEAR GradientStyle.

Change-Id: I1a2b986a004fecbf68050c6bf95be549684fea70